consertado erro ao carregar imagem

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             Preencha os dados acima para ver o resultado!
         </div>
         <div id="recado">
-            OBSERVAÇÃO: Após você colocar o ano vai aparecer a foto de uma pessoa equivalente com a idade dela.
+            OBSERVAÇÃO: Após você colocar o ano, vai aparecer a foto de uma pessoa equivalente com a idade dela.
         </div>
     </section>
     <script src="./js/script.js"></script>
